begin of unit tests implementation